--- a/source/sass/common-styles/_scaffolding.scss
+++ b/source/sass/common-styles/_scaffolding.scss
@@ -1,6 +1,8 @@
 body {
   box-sizing: border-box;
   // font-family: $font-family;
+  font-family: "Montserrat", "Arial", sans-serif;
+  // background-color: $special_dark-grey;
   // font-size: $font-size-base;
   // font-weight: $font-weight-regular;
   margin: 0 auto;
