--- a/source/sass/sass-tools/_variables.scss
+++ b/source/sass/sass-tools/_variables.scss
@@ -1,13 +1,21 @@
 // Colors
 $pimary-color: #000;
 $secondary-color: #fff;
+$darken: #2c2e3f;
+$deep-darken: #141517;
+$accent-hover: #f17d4b;
+$accent-basic: #fe7865;
+;
+
+
+
+
+
 $basic-green: tan;
 $basic-gray: #f2f2f2;
-$special_dark-grey: #444444;
 
 // Fonts
-// $font-family: "Oswald", "Arial", sans-serif;
-// $secondary-font-family: "Arial", sans-serif;
+$font-family: "Montserrat", sans-serif;
 
 $font-size-tiny: 12px;
 $font-size-small: 14px;
