--- a/source/sass/block-styles/_header.scss
+++ b/source/sass/block-styles/_header.scss
@@ -1,3 +1,12 @@
 .header {
-  // background-color: $secondary-color;
+  display: flex;
+  align-items: center;
+  min-height: 100px;
+  background-color: $secondary-color;
+  // font-weight: 700;
+  color: $pimary-color;
+  outline: 2px dotted aqua;
+}
+.header__logo-pic {
+  margin: 0 auto 0 0;
 }
