Add the basic styles

--- a/source/sass/block-styles/_detals.scss
+++ b/source/sass/block-styles/_detals.scss
@@ -11,8 +11,16 @@
 
 .detals__tab-button {
   color: $darken;
+  font-size: $font-size-big;
+  font-weight: $font-weight-medium;
   line-height: 2.8;
   opacity: 0.3;
+
+  &:hover,
+  &:focus {
+    color: $accent-hover;
+    transition: 0.4s;
+  }
 }
 
 .detals__tab-button--active {
@@ -30,4 +38,39 @@
   width: 900px;
   min-height: 596px;
   background-color: purple;
+}
+
+.detals__country-caption {
+  font-weight: $font-weight-semi-bold;
+  font-size: $font-size-enormous;
+  margin: 0;
+}
+
+.detals__country-text {
+  font-weight: $font-weight-regular;
+  opacity: 0.7;
+}
+
+.detals__country-buy-link {
+  @include primary-link-mixin($font-size-tiny, 75px, 250px);
+}
+
+.detals__country-reviews {
+  background-color: palegreen;
+}
+
+.detals__reviews-caption {
+  font-weight: $font-weight-medium;
+  font-size: $font-size-huge;
+  margin: 0;
+}
+
+.detals__country-reviews-text {
+  font-size: $font-size-small;
+  font-weight: $font-weight-regular;
+  opacity: 0.7;
+}
+
+.detals__author-name {
+  font-weight: $font-weight-medium;
 }
