--- a/source/sass/block-styles/_intro.scss
+++ b/source/sass/block-styles/_intro.scss
@@ -1,4 +1,5 @@
 .intro {
+  box-sizing: border-box;
   color: $secondary-color;
   width: 50%;
   min-height: 860px;
@@ -8,4 +9,21 @@
 
 .intro__caption {
   margin: 0;
+  font-size: $font-size-enormous;
+  font-weight: $font-weight-semi-bold;
+}
+
+.intro__lead {
+  width: 360px;
+  font-size: $font-size-base;
+  font-weight: $font-weight-regular;
+}
+
+.intro__tour-link {
+  @include primary-link-mixin();
+  padding: 0 0 0 40px;
+  text-align: left;
+  background-image: url("../img/arrow-right.svg");
+  background-repeat: no-repeat;
+  background-position: 90% 50%;
 }
