--- a/source/sass/block-styles/_main.scss
+++ b/source/sass/block-styles/_main.scss
@@ -1,20 +1,3 @@
 .main {
-  color: $secondary-color;
-  background-color: $basic-green;
-  // color: blue;
-
-  display: block;
-  min-height: 350px;
-  font-size: $font-size-large;
-
+  color: $darken;
 }
-
-// .main__main-title {
-//   font-size: $font-size-huge;
-//   font-weight: $font-weight-regular;
-// }
-
-// .main__slogan {
-//   font-size: $font-size-small;
-//   text-transform: uppercase;
-// }
