--- a/source/sass/sass-tools/_mixins.scss
+++ b/source/sass/sass-tools/_mixins.scss
@@ -1,30 +1,20 @@
-// @mixin primary-link-mixin($font-size: $font-size-small, $line-height: $line-height-big, $width: 100%) {
-//   box-sizing: border-box;
-//   display: inline-block;
-//   font-size: $font-size;
-//   line-height: $line-height;
-//   text-align: center;
-//   text-transform: uppercase;
-//   color: $secondary-color;
-//   font-weight: $font-weight-regular;
-//   width: $width;
-//   padding: 0 26px;
-//   background-color: $basic-green;
-//   border: none;
+@mixin primary-link-mixin($font-size: $font-size-tiny, $line-height: 75px, $width: 340px) {
+  box-sizing: border-box;
+  display: inline-block;
+  font-size: $font-size;
+  line-height: $line-height;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: $secondary-color;
+  font-weight: $font-weight-bold;
+  width: $width;
+  background-color: $accent-basic;
+  border: none;
 
-  // &:hover,
-  // &:focus,
-  // a &:focus {
-  //
-  // }
-  //
-  // &:active {
-  //
-  // }
-
-  // &--disabled,
-  // &--disabled:hover,
-  // &--disabled:active {
-  //
-  // }
+  &:hover,
+  &:focus,
+  a &:focus {
+    background-color: $accent-hover;
+  }
 }
