--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "common-styles/_normalize.scss";
 @import "common-styles/_scaffolding.scss";
 @import "sass-tools/_variables.scss";
-// @import "sass-tools/_mixins.scss";
+@import "sass-tools/_mixins.scss";
 @import "block-styles/_page.scss";
 @import "block-styles/_header.scss";
 @import "block-styles/_navigation.scss";
@@ -13,7 +13,6 @@
 @import "block-styles/_prices.scss";
 @import "block-styles/_feedback.scss";
 @import "block-styles/_detals.scss";
-// @import "block-styles/_contacts.scss";
 @import "block-styles/_footer.scss";
 // @import "block-styles/_primary-link.scss";
 @import "block-styles/_main.scss";
