--- a/source/sass/block-styles/_navigation.scss
+++ b/source/sass/block-styles/_navigation.scss
@@ -5,6 +5,12 @@
   font-size: $font-size-small;
   font-weight: $font-weight-medium;
 
+  @media (max-width: $breakpoint-tablet) {
+    font-size: $font-size-big;
+    font-weight: $font-weight-semi-bold;
+    color: $light-darken;
+  }
+
   &:hover,
   &:focus {
     color: $accent-hover;
