--- a/source/sass/sass-tools/_variables.scss
+++ b/source/sass/sass-tools/_variables.scss
@@ -7,6 +7,8 @@ $accent-hover: #f17d4b;
 $accent-basic: #fe7865;
 $ultra-light: #e5e5e5;
 $light-darken: #48494d;
+$lighten-darken:#d7d9df;
+$ultra-lighten:#f8f8f8;
 
 // Fonts
 $font-size-micro: 10px;
