--- a/source/sass/block-styles/_header.scss
+++ b/source/sass/block-styles/_header.scss
@@ -4,7 +4,13 @@
   min-height: 100px;
   background-color: $secondary-color;
   color: $pimary-color;
-  outline: 2px dotted aqua;
+  // outline: 2px dotted aqua;
+
+  @media (max-width: $breakpoint-tablet) {
+    position: relative;
+    min-height: 50px;
+    padding: 0 0 0 20px;
+  }
 }
 
 .header__logo-pic {
@@ -17,6 +23,8 @@
 }
 
 .header__contacts {
+  display: flex;
+  align-items: center;
   color: $deep-darken;
   font-size: $font-size-little-big;
   font-weight: $font-weight-medium;
@@ -28,6 +36,58 @@
   &:hover,
   &:focus {
     color: $accent-hover;
+    transition: 0.4s;
+  }
+}
+
+.header__contacts span {
+  padding: 0 15px;
+}
+
+.header__menu-toggle-button {
+  display: none;
+  border: none;
+
+  @media (max-width: $breakpoint-tablet) {
+    display: block;
+  }
+}
+
+.header__menu-toggle-button--burger {
+  width: 72px;
+  min-height: 50px;
+  background-color: $accent-basic;
+  background-image: url("../img/burger.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  @media (max-width: $breakpoint-mobile) {
+    width: 50px;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $accent-hover;
+    transition: 0.4s;
+  }
+}
+
+.header__menu-toggle-button--cross {
+  width: 50px;
+  min-height: 50px;
+  background-color: $secondary-color;
+  background-image: url("../img/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  // @media (max-width: $breakpoint-tabl) {
+  //   width: 50px;
+  // }
+
+  &:hover,
+  &:focus {
+    background-color: $lighten-darken;
+    opacity: 0.1;
     transition: 0.4s;
   }
 }
